--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 *{
-    outline: red 1px solid;
+    /* outline: red 1px solid; */
 }
 body{
     background: #020912;
 }
-.github-icon{
-    width: 50px;
-    height: 50px;
+.head-icons svg{
+    width: 55px;
+    height: 55px;
 }
