--- a/public/style/main.css
+++ b/public/style/main.css
@@ -1,25 +1,40 @@
 #head_title {
   font-family: "Archivo Black", sans-serif;
+  background: linear-gradient(to right, #00d1ff, #ff00d1);
+  font-weight: 800;
+  /* SAFARI OR CHROME BROWSER */
+  -webkit-background-clip: text;
+  /* Standard BROWSER */
+  background-clip: text;
+  color: transparent;
   font-size: 60px;
 }
-img[alt="head-icon-1"] {
-  width: 50px;
-  height: 50px;
+@media only screen and (max-width: 430px) {
+  #head_title {
+    font-size: 40px;
+  }
 }
-img[alt="head-icon-2"] {
-  width: 54px;
-  height: 54px;
+#main-icon {
+  color: white;
+}
+#main-icon:hover {
+  color: #00d1ff;
 }
 #btn-info {
   width: 210px;
-  color: white;
   border-radius: 30px;
 }
+#btn-info a {
+  color: white;
+}
+#btn-info a:hover {
+  color: black;
+}
 #btn-info:hover {
+  box-shadow: 0 0 20px 5px #00d1ff;
   color: black;
 }
 img[alt="arrow-right"] {
   width: 50px;
   height: 25px;
 }
-                
