--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,6 +1,9 @@
 body {
   background: #020912;
 }
+html {
+  scroll-behavior: smooth;
+}
 * {
   /* outline: 1px solid red; */
   scrollbar-width: thin;
