--- a/public/style/services.css
+++ b/public/style/services.css
@@ -1,3 +1,34 @@
-#services-page{
-    background: #e0e0e0e0;
+#services-page {
+  background: #e0e0e0e0;
+}
+.card {
+  width: 300px;
+  height: 345px;
+  padding: 0.8em;
+  margin-top: 20px;
+  background: #020912;
+  border-radius: 20px;
+  overflow: visible;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.card-img {
+  height: 40%;
+  width: 100%;
+  border-radius: 0.5rem;
+  transition: 0.3s ease;
+}
+
+.card-info {
+  padding-top: 10%;
+}
+
+/*Hover*/
+.card-img:hover {
+  transform: translateY(-25%);
+  box-shadow: #0a95b8 0px 13px 47px -5px, #0a95b8 0px 8px 16px -8px;
+}
+img[alt="service_img"] {
+  width: 100%;
+  height: 100%;
 }
